--- a/opensergo-dashboard-ui/legacy.index.html
+++ b/opensergo-dashboard-ui/legacy.index.html
@@ -7,10 +7,10 @@
   <meta name="description" content="Sentinel 控制台,Sentinel Dashboard,Admin">
   <meta name="viewport" content="width=device-width">
 
-  <link rel="stylesheet" href="./lib/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="./lib/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./legacy.dist/css/app.css">
-  <link rel="icon" type="image/x-icon" href="./static/favicon.ico">
+  <link rel="stylesheet" href="/build/lib/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/build/lib/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/build/css/app.css">
+  <link rel="icon" type="image/x-icon" href="/build/static/favicon.ico">
   <base href="./">
 </head>
 
@@ -18,13 +18,13 @@
   <div ng-app="sentinelDashboardApp">
     <div ui-view></div>
   </div>
-  <script src="./lib/js/jquery.min.js"></script>
-  <script src="./lib/js/bootstrap.min.js"></script>
-  <script src="./lib/js/angular.min.js"></script>
-  <script src="./lib/js/g2.min.js"></script>
+  <script src="/build/lib/js/jquery.min.js"></script>
+  <script src="/build/lib/js/bootstrap.min.js"></script>
+  <script src="/build/lib/js/angular.min.js"></script>
+  <script src="/build/lib/js/g2.min.js"></script>
 
-  <script src="./legacy.dist/js/app.vendor.js"></script>
-  <script src="./legacy.dist/js/app.js"></script>
+  <script src="/build/js/app.vendor.js"></script>
+  <script src="/build/js/app.js"></script>
 </body>
 
 </html>
